// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Submenu > props > :disabled 1`] = `
<li
  class="t-submenu t-is-disabled"
>
  <!---->
</li>
`;

exports[`Submenu > props > :name 1`] = `
<li
  class="t-submenu"
  name="1"
>
  <!---->
</li>
`;
